# apps/web/openapi/learnforge.json
@@ -1606,7 +1606,8 @@
           "independent",
           "lastEvidenceAt",
           "reviewDue",
-          "lessonIds"
+          "lessonIds",
+          "standalonePractice"
         ],
         "type": "object",
         "properties": {
@@ -1652,6 +1653,9 @@
             "items": {
               "type": "string"
             }
+          },
+          "standalonePractice": {
+            "type": "boolean"
           }
         }
       },
